# dihub-cqrs

./: LICENSE  README.md  pyproject.toml
dihub_cqrs/: __init__.py  constants.py  decorators.py  dihub_cqrs_module.py  exceptions.py  types.py
dihub_cqrs/__internal/: helpers.py
dihub_cqrs/__internal/dispatchers/: __init__.py  dispatcher.py  static_dispatcher.py
dihub_cqrs/__internal/query_busses/: __init__.py  query_bus.py  static_query_bus.py
example/: app.py
